system_design/2ndGate/LateAbsentCheck/log.txt
LAC.cc: In function ‘int getCount(int)’:
LAC.cc:43:16: error: no matching function for call to ‘std::vector<std::basic_string<char> >::erase(int&)’
       v.erase(i);
                ^
LAC.cc:43:16: note: candidates are:
In file included from /usr/include/c++/4.8/vector:69:0,
                 from LAC.cc:20:
/usr/include/c++/4.8/bits/vector.tcc:134:5: note: std::vector<_Tp, _Alloc>::iterator std::vector<_Tp, _Alloc>::erase(std::vector<_Tp, _Alloc>::iterator) [with _Tp = std::basic_string<char>; _Alloc = std::allocator<std::basic_string<char> >; std::vector<_Tp, _Alloc>::iterator = __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >; typename std::_Vector_base<_Tp, _Alloc>::pointer = std::basic_string<char>*]
     vector<_Tp, _Alloc>::
     ^
/usr/include/c++/4.8/bits/vector.tcc:134:5: note:   no known conversion for argument 1 from ‘int’ to ‘std::vector<std::basic_string<char> >::iterator {aka __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >}’
/usr/include/c++/4.8/bits/vector.tcc:146:5: note: std::vector<_Tp, _Alloc>::iterator std::vector<_Tp, _Alloc>::erase(std::vector<_Tp, _Alloc>::iterator, std::vector<_Tp, _Alloc>::iterator) [with _Tp = std::basic_string<char>; _Alloc = std::allocator<std::basic_string<char> >; std::vector<_Tp, _Alloc>::iterator = __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >; typename std::_Vector_base<_Tp, _Alloc>::pointer = std::basic_string<char>*]
     vector<_Tp, _Alloc>::
     ^
/usr/include/c++/4.8/bits/vector.tcc:146:5: note:   candidate expects 2 arguments, 1 provided
LAC.cc: In function ‘int main()’:
LAC.cc:59:3: warning: lambda expressions only available with -std=c++11 or -std=gnu++11 [enabled by default]
   });  
   ^
LAC.cc:59:4: error: no matching function for call to ‘for_each(std::vector<std::basic_string<char> >::iterator, std::vector<std::basic_string<char> >::iterator, main()::__lambda0)’
   });  
    ^
LAC.cc:59:4: note: candidate is:
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from LAC.cc:21:
/usr/include/c++/4.8/bits/stl_algo.h:4411:5: note: template<class _IIter, class _Funct> _Funct std::for_each(_IIter, _IIter, _Funct)
     for_each(_InputIterator __first, _InputIterator __last, _Function __f)
     ^
/usr/include/c++/4.8/bits/stl_algo.h:4411:5: note:   template argument deduction/substitution failed:
LAC.cc: In substitution of ‘template<class _IIter, class _Funct> _Funct std::for_each(_IIter, _IIter, _Funct) [with _IIter = __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >; _Funct = main()::__lambda0]’:
LAC.cc:59:4:   required from here
LAC.cc:59:4: error: template argument for ‘template<class _IIter, class _Funct> _Funct std::for_each(_IIter, _IIter, _Funct)’ uses local type ‘main()::__lambda0’
   });  
    ^
LAC.cc:59:4: error:   trying to instantiate ‘template<class _IIter, class _Funct> _Funct std::for_each(_IIter, _IIter, _Funct)’
